Closed Bug 37318 Opened 25 years ago Closed 25 years ago

mozilla-mac-M16.sea.bin does not launch on MacOS 8.5.1

Categories

(SeaMonkey :: General, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: agracebush, Assigned: sfraser_bugs)

References

Details

(Keywords: smoketest, Whiteboard: [dogfood+])

I have downloaded, unstuffed the build for 2000-04-26-11 on three machines- same OS and am unable to launch Using icon, drag and drop of ProfileMigration or ProfileManager does not work with old profiles (created from previous 6.0 build) or with clean system (deleting Documents folder and Mozilla Registry) The Mozilla splash screen comes up and quietly dies. Other users with 8.6 and 9.0 are not having this problem
I tried this with ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/2000-04-26-20-M16/Netscap e6-mac.sea.bin also- same results- splash screen comes up and process quits Claudius reported he experiences this behavior also
The commercial build 2000-04-27-08 does not launch either Unable to test this build
Severity: normal → critical
Keywords: smoketest
gbush@netscape.com, do you know who else runs 8.5 or who usually handles startup mac problems? I don't want this to sit any longer without someone seeing it and Browser General can be a wasteland for some bugs.
another thought, does it finish a launch if you try -mail or -ProfileManager (do commandline options work on Mac?) Can you run mozilla -console and see what the last message to the console is?
I am reinstalling stuffit per Samir, and rebuilding desktop. I have tried ProfileManager and ProfileMigrator options- is there a console for Mac? When machine reboots I will retest and update. thanks
add to cc list I also found- that viewer.app did not launch (went back to last week builds and it did launch) error is that it could not find InterfaceLib-FetchFontInfo Could that be a file that is not on OS8.5.1 but is on later OS?
Whiteboard: [dogfood+]
Putting on [dogfood+] radar.
This is almost certainly a library linkage issue. samir, pink: you've been messing with those recently.
patrick, didn't you also touch linkage stuff in interfaces.mcp?
OS8.5 has this problem too- but not OS9.0 builds for 200-04-28
lucky me... this is the problem I saw yesterday... my development build is dead :-( Is it a problem with the InterfaceLib (did that change?) with the latest upgrades in MacOS Support?
Severity: critical → blocker
This is obviously a linkage issue. brade: could you go through the main projects that link with OS libs (InterfaceLib, widget, apprunner, others?) and check for weak linkage in the optimized target with libs that might not be present.
Well, since no-one else is going to fix this, I'll take it. eli, you can help me out by running FragView on a build that fails to launch.
Assignee: asadotzler → sfraser
this is listed as a smoketest blocker, but it's left over from yesterday. should I be holding the tree closed for this?
Don't hold the tree for this; it won't be obscured by other checkins.
[e-mail sent to simon, of dubious assistance on his noble quest.]
OK, I checked in a fix for this, I think. The problem was that Apple moved FetchFontInfo from FontManager lib to InterfaceLib between 8.5 and 8.6, yet our build system expects it to come from IntefaceLib. So I'm weak linking gfx with InterfaceLib, and finding FetchFontInfo at runtime if necessary.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
build 2000-05-03-08 M16 thanks Simon
Status: RESOLVED → VERIFIED
I'm seeing this bug again
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Target Milestone: --- → M16
I have checked in a fix for this (r=sfraser, a=granrose); not sure if leaf/ granrose will respin or not
I'm respinning now.
resolve fixed
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
*** Bug 40999 has been marked as a duplicate of this bug. ***
fixed in build 2000053011
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.