Fix for bug 37318 -- fix library linkage so that FetchFontInfo is weak linked, and look for it at runtime.